# violet

./: .dev.env  .env.docker.example  .gitignore  .gitmodules  .metadata  AltStore.json  AppImageBuilder-aarch64.yml  AppImageBuilder-x86_64.yml  AppImageBuilder.yml  DOCKER.md  LICENSE  OPTIMIZE.md  README.md  a.py  action.js  analysis_options.yaml  boot.cmd  build-docker.sh  cd.sh  deploy.cmd  deploy.sh  docker-compose.release.yml  docker-compose.yaml  docker-compose.yml  emulator.bat  generate.bat  install.sh  makefile  package-lock.json  package.json  preprocess-android.py  preprocess-ios.py  preprocess-linux.py  profile.bat  program.js  pubspec.yaml  result-character.json  result-korean-character.json  result-korean-merge.json  result-korean-series.json  (+9 more)
android/: build.gradle  gradle.properties
app/: .gitignore  README.md  pubspec.yaml
app-population/: population.js
assets/: hisoki.json
bot/: .gitignore  Cargo.toml
bot/src/: main.rs  violet.rs
checker/: locale-checker.py
dict/: kor-character.js  kor-series.js  kor-tag.js
doc/: dev.md  plan.md
downloader/: Cargo.toml
elk-inserter/: package-lock.json
fast-dl/: .gitignore  README.md  go.mod  go.sum  main.go  options_test.go  resolver.go  resolver_test.go
fast-hsync/: .dockerignore  .gitignore  Dockerfile  README.md  db.go  exhentai.go  exhentai_test.go  go.mod  go.sum  main.go  main_test.go  model.go  parser.go
fast-search/: CMakeLists.txt  Main.cpp  nohup.out
fast-search-rs/: Cargo.toml  build.rs  rustfmt.toml
hcache/: Program.cs  publish-linux-x64.sh
hdownloader/: AppProvider.cs  hdownloader.csproj  publish-linux-x64-aot.bat
hsync/: .gitignore  CharacterTest.cs  Command.cs  DataBaseCreator.cs  DataBaseCreatorLowPerf.cs  README.md  SeriesTest.cs  Syncronizer.cs  SyncronizerLowPerf.cs  Version.cs  ct.bat  rtt.bat  sync.py
ios/: GoogleService-Info.plist  Podfile
lib/: database.dart  dialogs.dart  files.dart  firebase_options.dart  locale.dart  main.dart  script.dart  settings.dart  tabbar.dart  update_sync.dart  user.dart  variables.dart
libviolet/: Cargo.toml  README.md  build.sh  makefile
linux/: CMakeLists.txt  my_application.cc
manual/: en.md  ko.md
miner/: cuda-test.py  do-only-ocr-unit.py  extracting-ids.py  logfile-rank.py
msg-cached/: msg-cached.csproj
msgex/: Cargo.toml
p7zip/: Android.gitignore  p7zip.cpp
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: decompress.rs  mod.rs  simple.rs
rust/src/utils/: dpiproxy.rs  mod.rs
script/: README.md  script.sln
src/: app.module.ts  app.service.ts  main.ts
tag-info/: .gitignore  README.md  a.py  merge.js  package-lock.json  package.json  program.js  result-character.json  result-korean-character.json  result-korean-merge.json  result-korean-series.json  result-korean-tag.json  result-newest-character.json  result-series.json  series-character-matcher.json  series-character-translator.js
test/: bookmark_test.dart  cert_test.dart  component_test.dart  get_test.dart  parse_test.dart  pull-db.py  test_bookmark.dart  test_cert.dart  test_component.dart  test_downloader.dart  test_downloader_isolate.dart  test_downloader_tasks.dart  test_filter.dart  test_get.dart  test_query.dart  test_script.dart  test_static.dart  widget_test.dart
violet/: .gitignore  .metadata  AltStore.json  LICENSE  OPTIMIZE.md  README.md  analysis_options.yaml  bb.bat  build.bat  build.yaml  (+11 more)
violet-batch/: .gitignore
violet-graph/: .dockerignore  Dockerfile  README.md  author_similarity.go  author_similarity_test.go  go.mod  graph.go  graph_test.go  links.go  links_test.go  main.go  main_test.go  server.go  server_test.go  similar.go  similar_test.go  works.go  works_test.go
violet-llm/: .dockerignore  .gitignore  Dockerfile  README.md  UPDATE_INDEX.md  accelerated_index.py  benchmark-queries.txt  benchmark_search_index.py  benchmark_tei.py  build_index.py  build_intensity.py  common.py  embed-modal.py  embed.py  prepare.py  qwen3-reranker.jinja  requirements-benchmark.txt  requirements-server.txt  requirements.txt  run-modal.ps1  search.py  server.py  split_dataset.py  start-quantized.ps1  stop-quantized.ps1  stop-search-models.ps1
violet-message-search/: .dockerignore  Cargo.toml  Dockerfile  OPTIMIZATION_NOTES.md  README.md  build.rs
violet-message-search-client/: .env  Dockerfile  README.md
violet-message-search-core/: .gitignore  MANUAL.md  README.md  count-messages.py  log-rank.py
violet-message-search-core/fast-search-rs/: .gitignore  .gitmodules  Cargo.toml  build.rs
violet-message-search-core/fast-search-rs/cxx/: main.cpp  main.hpp
violet-message-search-core/fast-search-rs/src/: binding.rs  cache.rs  displant.rs  main.rs  message.rs
violet-message-search-core/msgex/: .gitignore  Cargo.toml  conn-viz.py  result-(token, search, usage).txt  result-(token, usage, search).txt  word-cand.json  word-conn-article.json  word-conn-page3.json  word-usage-article-20.json
violet-message-search-core/msgex/.cargo/: config
violet-message-search-core/msgex/src/: main.rs
violet-message-search/cxx/: CMakeLists.txt  main.cpp  main.hpp
violet-ocr/: .gitignore  BENCH.md  README.md  adjust_raw_dialogues.py  fast_dl_runner.py  fix_ocr_with_vllm.py  merge-raw-dialogues.cmd  ocr_common.py  run-works-turbo.py  start-turboocr.cmd  stop-turboocr.cmd  trace_writer.py  work_plan.py
violet-server/: .dev.env  .gitignore  .test.env  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
violet-server-hook/: README.md  cd.sh  postreceive.py  run.sh
violet-web/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
violet/android/app/src/main/cpp/: CMakeLists.txt  dns.cpp  hostlist.cpp  socket.h
violet/android/app/src/main/cpp/tun2http/: tun2http.h
violet/libviolet/: Cargo.toml  build.bat
violet/libviolet/.cargo/: config
violet/libviolet/src/: lib.rs  main.rs
violet/rust/: Cargo.toml
violet/rust/src/: frb_generated.rs  lib.rs
violet/rust/src/api/: simple.rs
violet/rust/src/utils/: decompress.rs
(+1239 files in other folders)
