[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
reqwest = "0.11.18"
serde_json = "1.0"
serenity = "0.11"
sha2 = "0.10.7"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
