[package]
name = "rust_lib_violet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.24"
sevenz-rust = { version = "0.2" }
hyper = { version = "0.13" }
hyper-tls = { version = "0.4" }
eyre = "0.6.12"
tokio = "1.36.0"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
