[package]
name = "fast-search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0.204"
itertools = "0.13.0"
rocket = { version = "0.5.1", features = ["json"] }
lazy_static = "1.5.0"
rayon = "1.10.0"
simd-json = "0.13.10"
structopt = "0.3.26"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.1.7"
cmake = "0.1.50"
