[package]
name = "msgex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.1"
indicatif = "0.17.3"
itertools = "0.10.5"
rust-tfidf = "1.1.1"
serde = {version="1.0.154", features = ["derive"]}
serde_json = "1.0.96"
simd-json = "0.9.1"
