[package]
name = "violet"
version = "0.1.0"
authors = ["violet-dev <violet.dev.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "violet"
crate-type = ["staticlib", "cdylib"]

[dependencies]
openssl = { version = "0.10.30", features = ["vendored"] }
# futures = "0.3.5"
# futures-cpupool = "0.1.8"
# hyper = "0.12"
# hyper-rustls = "0.12"
reqwest = "0.10.7"
tokio = "0.2.22"
# serde_json = "1.0"
concurrent-queue = "1.1.2"
lazy_static = "1.4.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic