[package]
name = "violet"
version = "0.1.0"
authors = ["violet-dev <violet.dev.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "violet"
# crate-type = ["staticlib", "cdylib"]

[dependencies]
# openssl = { version = "0.10.30", features = ["vendored"] }
futures = "0.3.5"
futures-cpupool = "0.1.8"
hyper = "0.13.7"
hyper-rustls = "0.21"
hyper-native-tls = "0.3.0"
reqwest = { version="0.10.7", features = ["stream"] }
# tokio = "0.2.22"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
concurrent-queue = "1.1.2"
lazy_static = "1.4.0"
futures-util = "0.3.5"
http = "0.2.1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic