[package]
name = "rust_lib_violet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.24"
sevenz-rust = { version = "0.2" }
eyre = "0.6.12"

# ajson = "0.2"
# async-std = { version = "1.5", features = ["std"], default-features = false }
# futures-core = { version = "0.3", default-features = false }
# futures-util = { version = "0.3", default-features = false }
# http = "0.2"
# hyper = { version = "1.2.0" }
# hyper-tls = { version = "0.6.0" }
# eyre = "0.6.12"
# tokio = { version = "1.36.0", features = ["io-util", "net", "time"] }
# # tokio = { version = "1.36.0", features = ["full"] }
# tokio-io-timeout = "0.4"
# twoway = "0.2"

hyper = { version = "0.13" }
hyper-tls = { version = "0.4" }
tokio = { version = "0.2", features = ["full"] }
tokio-io-timeout = "0.4"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
http = "0.2"
twoway = "0.2"
clap = "2.32"
lazy_static = "1.4"
ajson = "0.2"
async-std = { version = "1.5", features = ["std"], default-features = false }

[target.'cfg(not(windows))'.dependencies]
rlimit = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
